<resources>
    <string name="app_name">LunchR</string>
    <string name="title">LunchR</string>
    <string name="rand_lunch">昼ご飯をランダムで選択</string>
    <string name="rand_dinner">晩ご飯をランダムで選択</string>
    <string name="setting">メニューを追加、保存</string>
    <string name="start_back">戻る</string>
    <string name="next">next</string>
    <string name="add">追加</string>
    <string name="delete">削除</string>
    <string name="save">保存</string>
    <string name="menu">メニュー</string>
    <string name="store">お店</string>
    <string name="price">金額</string>

    <string-array name="lunch_or_diner">
        <item>昼ご飯</item>
        <item>夜ご飯</item>
    </string-array>
</resources>