<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--アプリ名を表示-->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="245dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        tools:ignore="TextSizeCheck" />

    <!--お昼ご飯をランダムで表示するボタン-->
    <Button
        android:id="@+id/ViewRandLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rand_lunch"
        android:onClick="result_lunch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintVertical_bias="0.161" />

    <!--晩ご飯をランダムで表示するボタン-->
    <Button
        android:id="@+id/ViewRandDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rand_dinner"
        android:onClick="result_dinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewRandLunch"
        app:layout_constraintVertical_bias="0.225" />

    <!--メニューの追加編集画面に移行するボタン-->
    <Button
        android:id="@+id/AddEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:onClick="add_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewRandDinner"
        app:layout_constraintVertical_bias="0.362" />
</androidx.constraintlayout.widget.ConstraintLayout>